# MyLauncher

./: .gitmodules  CMakeLists.txt  ReadMe.md  Roadmap.md  versionInfo.json
.github/workflows/: cmake-multi-platform.yml
qml/: Main.qml
src/: auth.cpp  auth.h  config.cpp  config.h  downloader.cpp  downloader.h  main.cpp  minecraftcommandlineprovider.cpp  minecraftcommandlineprovider.h
